--- a/zoom_recorder/.env
+++ b/zoom_recorder/.env
@@ -1,5 +1,6 @@
 RETRY=3
 RECORD=1
+BOT_NAME="Zoom Bot"
 WAIT_SEC=60
 ADMIT_WAIT=200
 CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
