added audio rec subprocess, rec toggle via env file

--- a/zoom_recorder/.env
+++ b/zoom_recorder/.env
@@ -1,6 +1,8 @@
 RETRY=3
-RECORD=0
+RECORD_VIDEO=0
+RECORD_AUDIO=1
 DRIVER="chromedriver99"
+SUBPROCESS_CMD="parec -d 0 | lame -r -V0 - out.mp3"
 BOT_NAME="Zoom Bot"
 WAIT_SEC=30
 ADMIT_WAIT=200
