--- a/zoom_recorder/.env
+++ b/zoom_recorder/.env
@@ -2,7 +2,8 @@ RETRY=3
 RECORD_VIDEO=0
 RECORD_AUDIO=1
 DRIVER="chromedriver99"
-SUBPROCESS_CMD="parec -d 0 | lame -r -V0 - ../storage/"
+SUBPROCESS_CMD="parec -d 0 | lame -r -V0 - "
+VOLUME="../storage/"
 BOT_NAME="Zoom Bot"
 WAIT_SEC=30
 ADMIT_WAIT=200
