env var for update db time

--- a/zoom_recorder/.env
+++ b/zoom_recorder/.env
@@ -7,4 +7,5 @@ VOLUME="../storage/"
 BOT_NAME="Zoom Bot"
 WAIT_SEC=30
 ADMIT_WAIT=200
+UPDATE_INTERVAL=10
 CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
