fixed user exit

--- a/zoom_recorder/.env
+++ b/zoom_recorder/.env
@@ -8,5 +8,5 @@ BOT_NAME="Zoom Bot"
 WAIT_SEC=30
 ADMIT_WAIT=200
 UPDATE_INTERVAL=10
-# CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
-CLUSTER="mongodb://record_meeting:meeting%40123@167.71.224.78:27017/meetingLiveStreaming?retryWrites=true&w=majority"
+CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
+# CLUSTER="mongodb://record_meeting:meeting%40123@167.71.224.78:27017/meetingLiveStreaming?retryWrites=true&w=majority"
