--- a/google_meet_recorder/.env
+++ b/google_meet_recorder/.env
@@ -6,4 +6,6 @@ ADMIT_WAIT=200
 HEAR_WINDOW=0.3
 EMAIL="pymeetbot@gmail.com"
 PASSWORD="gurgaon48"
+VOLUME="../storage/"
 CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
+#CLUSTER="mongodb://record_meeting:meeting%40123@167.71.224.78:27017/meetingLiveStreaming?retryWrites=true&w=majority"
