timeline regular update left participants

--- a/google_meet_recorder/.env
+++ b/google_meet_recorder/.env
@@ -1,11 +1,12 @@
 RETRY=3
 RECORD=0
-DRIVER="chromedriver97"
+DRIVER="geckodriver"
 WAIT_SEC=60
 ADMIT_WAIT=200
 HEAR_WINDOW=0.3
-EMAIL="pymeetbot@gmail.com"
-PASSWORD="gurgaon48"
+EMAIL="gcp@ezeiatech.com"
+BOT_PASSWORD="Ezeia@1234"
 VOLUME="../storage/"
+UPDATE_INTERVAL=10
 CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
 #CLUSTER="mongodb://record_meeting:meeting%40123@167.71.224.78:27017/meetingLiveStreaming?retryWrites=true&w=majority"
