added audio and new db fields

--- a/google_meet_recorder/.env
+++ b/google_meet_recorder/.env
@@ -1,11 +1,13 @@
 RETRY=3
 RECORD=0
+RECORD_AUDIO=1
 DRIVER="geckodriver"
 WAIT_SEC=60
 ADMIT_WAIT=200
-HEAR_WINDOW=0.3
+HEAR_WINDOW=0.4
 EMAIL="gcp@ezeiatech.com"
 BOT_PASSWORD="Ezeia@1234"
+SUBPROCESS_CMD="parec -d 0 | lame -r -V0 - "
 VOLUME="../storage/"
 UPDATE_INTERVAL=10
 CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
