--- a/google_meet_recorder/.env
+++ b/google_meet_recorder/.env
@@ -5,8 +5,8 @@ DRIVER="geckodriver"
 WAIT_SEC=60
 ADMIT_WAIT=200
 HEAR_WINDOW=0.4
-EMAIL="gcp@ezeiatech.com"
-BOT_PASSWORD="Ezeia@1234"
+EMAIL="meetingbotai@gmail.com"
+BOT_PASSWORD="gurgaon48"
 SUBPROCESS_CMD="parec -d 0 | lame -r -V0 - "
 VOLUME="../storage/"
 UPDATE_INTERVAL=10
