--- a/google_meet_recorder/.env
+++ b/google_meet_recorder/.env
@@ -10,5 +10,5 @@ BOT_PASSWORD="Ezeia@1234"
 SUBPROCESS_CMD="parec -d 0 | lame -r -V0 - "
 VOLUME="../storage/"
 UPDATE_INTERVAL=10
-CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
-#CLUSTER="mongodb://record_meeting:meeting%40123@167.71.224.78:27017/meetingLiveStreaming?retryWrites=true&w=majority"
+#CLUSTER="mongodb+srv://ishaan:ishaan@cluster0.jsoz4.mongodb.net/zoomdb?retryWrites=true&w=majority"
+CLUSTER="mongodb://record_meeting:meeting%40123@167.71.224.78:27017/meetingLiveStreaming?retryWrites=true&w=majority"
